<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.QuestionFourFragment">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28sp"
        android:textColor="@color/font"
        android:text="@string/questionnaire_4_child_area"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/rubik_light"
        android:textSize="14sp"
        android:textColor="@color/font"
        android:text="@string/_1_how_many_children_do_you_have"
        />

    <EditText
        android:id="@+id/input_child"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/primary_rounded"
        android:hint="@string/number_of_your_children"
        android:paddingStart="16dp"
        android:textColorHint="@color/grey"
        android:fontFamily="@font/rubik_regular"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radio_group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/rubik_light"
            android:textSize="14sp"
            android:textColor="@color/font"
            android:text="@string/_2_where_do_you_live"
            />

        <RadioButton
            android:id="@+id/radio_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/southwest"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/southeast"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_nw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/northwest"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_ne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/northeast"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/submit"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/back"
        android:textSize="16sp" />

</LinearLayout>