 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/background"
     android:layout_height="wrap_content">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingStart="20dp"
         android:paddingTop="40dp"
         android:paddingEnd="20dp"
         android:background="@color/background"
         tools:context=".SignUpActivity">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/create_account"
             android:textSize="35sp"
             android:fontFamily="@font/rubik_medium"
             android:textColor="@color/font"
             android:layout_marginBottom="4dp"/>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_slogan"
             android:textSize="14sp"
             android:fontFamily="@font/rubik_light"
             android:textColor="@color/font"
             android:layout_marginBottom="50dp"/>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/email"
             android:textSize="14sp"
             android:fontFamily="@font/rubik_regular"
             android:textColor="@color/font"
             android:layout_marginStart="16sp"
             android:layout_marginBottom="4dp"/>

         <EditText
             android:id="@+id/email"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/primary_rounded"
             android:hint="@string/input_email"
             android:paddingStart="16dp"
             android:textColorHint="@color/grey"
             android:fontFamily="@font/rubik_regular"
             android:textSize="14sp"
             android:layout_marginBottom="16dp"/>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/name"
             android:textSize="14sp"
             android:fontFamily="@font/rubik_regular"
             android:textColor="@color/font"
             android:layout_marginStart="16sp"
             android:layout_marginBottom="4dp"/>

         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/primary_rounded"
             android:hint="@string/input_name"
             android:paddingStart="16dp"
             android:textColorHint="@color/grey"
             android:fontFamily="@font/rubik_regular"
             android:textSize="14sp"
             android:layout_marginBottom="16dp"/>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/password"
             android:textSize="14sp"
             android:fontFamily="@font/rubik_regular"
             android:textColor="@color/font"
             android:layout_marginStart="16sp"
             android:layout_marginBottom="4dp"/>

         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/primary_rounded"
             android:hint="@string/input_password"
             android:paddingStart="16dp"
             android:textColorHint="@color/grey"
             android:fontFamily="@font/rubik_regular"
             android:inputType="textPassword"
             android:textSize="14sp"
             android:layout_marginBottom="32dp"/>

         <Button
             android:id="@+id/button_sign_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_button"
             android:text="@string/sign_up"
             android:fontFamily="@font/rubik_regular"
             android:textSize="16sp"
             android:layout_marginBottom="16dp"
             />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_marginBottom="80dp"
             >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/have_an_account"
                 android:fontFamily="@font/rubik_regular"
                 android:textSize="14sp"
                 android:textColor="@color/font"/>

             <TextView
                 android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
                 android:fontFamily="@font/rubik_medium"
                 android:textSize="14sp"
                 android:textColor="@color/primary"
                 android:layout_marginStart="4dp"/>
         </LinearLayout>
     </LinearLayout>
    </ScrollView>