<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="40dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:background="@color/background"
    tools:context=".HowActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:fontFamily="@font/rubik_medium"
        android:textSize="24sp"
        android:textColor="@color/font"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/our_goal"
        android:fontFamily="@font/rubik_regular"
        android:textSize="20sp"
        android:textColor="@color/font"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:fontFamily="@font/rubik_light"
        android:textSize="16sp"
        android:textColor="@color/font"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works"
        android:fontFamily="@font/rubik_regular"
        android:textSize="20sp"
        android:textColor="@color/font"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how"
        android:fontFamily="@font/rubik_light"
        android:textSize="16sp"
        android:textColor="@color/font"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/predict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/predict_now"
            android:layout_gravity="bottom"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>