<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".questionnaire.QuestionOneFragment">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28sp"
        android:textColor="@color/font"
        android:text="@string/questionnaire_1_age_amp_sex"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/rubik_light"
        android:textSize="14sp"
        android:textColor="@color/font"
        android:text="@string/_1_how_old_are_you"
        />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/primary_rounded"
        android:hint="@string/input_your_age"
        android:paddingStart="16dp"
        android:inputType="number"
        android:textColorHint="@color/grey"
        android:fontFamily="@font/rubik_regular"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/rubik_light"
            android:textSize="14sp"
            android:textColor="@color/font"
            android:text="@string/_2_you_identify_yourself_as"
            />

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/male"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/female"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/other"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/next"
        android:textSize="16sp" />


</LinearLayout>