<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".form.Form2Activity">



    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="14sp"
            android:textColor="@color/font"
            android:text="@string/_2_you_identify_yourself_as"
            />

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/male"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/female"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/other"
            android:textColor="@color/font"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/next"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/back"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>