<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".form.Form5Activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="250dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/_1_how_many_children_do_you_have"
            android:textColor="@color/font"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_child"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/primary_rounded"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/number_of_your_children"
            android:inputType="number"
            android:paddingStart="16dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/next"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/back"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>